--- a/votingApp/templates/votingApp/candidate_register.html
+++ b/votingApp/templates/votingApp/candidate_register.html
@@ -42,11 +42,17 @@
 
         <div class="form-group">
             <label>Password</label>
-            <input type="password" name="password" required class="form-control">
+            <div class="password-wrapper">
+                <input type="password" name="password" required class="form-control">
+                <i class="bi bi-eye-slash toggle-password-icon"></i>
+            </div>
         </div>
         <div class="form-group">
             <label>Confirm Password</label>
-            <input type="password" name="confirm_password" required class="form-control">
+            <div class="password-wrapper">
+                <input type="password" name="confirm_password" required class="form-control">
+                <i class="bi bi-eye-slash toggle-password-icon"></i>
+            </div>
         </div>
 
         <h4 style="color: var(--primary-color); margin: 25px 0 15px 0;">Election Details</h4>
@@ -61,7 +67,15 @@
             </select>
         </div>
 
-
+        <div class="form-group">
+            <label>State</label>
+            <select name="state" required class="form-select">
+                <option value="">-- Select State --</option>
+                {% for code, name in states %}
+                    <option value="{{ code }}">{{ name }}</option>
+                {% endfor %}
+            </select>
+        </div>
         <div class="form-group">
             <label>Party Affiliation</label>
             <select id="party_select" name="party_select" class="form-control" onchange="togglePartyFields()">
