added abbrieviations of parties to be unique

--- a/votingApp/templates/votingApp/candidate_dashboard.html
+++ b/votingApp/templates/votingApp/candidate_dashboard.html
@@ -90,6 +90,7 @@ e-Chayan{% endblock %} {% block content %}
             placeholder="Enter Party Name"
             class="form-control"
           />
+          <input type="text" name="new_party_abbr" placeholder="Abbreviation (e.g. BJP)" class="form-control" style="margin-top: 10px;">
         </div>
       </div>
 
