--- a/votingApp/templates/votingApp/candidate_register.html
+++ b/votingApp/templates/votingApp/candidate_register.html
@@ -97,6 +97,8 @@
         <div id="new_party_div" class="form-group" style="display: none;">
             <label>New Party Name</label>
             <input type="text" name="new_party_name" class="form-control">
+            <label style="margin-top: 10px;">Abbreviation</label>
+            <input type="text" name="new_party_abbr" class="form-control" placeholder="e.g. BJP">
             <br>
             <label>Party Symbol</label>
             <input type="file" name="new_party_symbol" class="form-control" accept="image/*">
