removed profile_photo of users to avoid complexity

--- a/votingApp/templates/votingApp/register.html
+++ b/votingApp/templates/votingApp/register.html
@@ -20,10 +20,7 @@
         <strong>Login:</strong> You can log in using either your generated Voter
         ID or your Email Address.
       </li>
-      <li>
-        <strong>Candidates:</strong> Must upload a photo and declare party
-        affiliation.
-      </li>
+      <li><strong>Candidates:</strong> Must declare party affiliation.</li>
     </ul>
   </div>
 
